syntax = "proto3";

enum EpComponentError {
    NONE = 0;           /* no error */
    UNKNOWN = 11;       /* (XXX) manually set to seL4_NumErrors */
}

/* message type for all PD component request messages */
message EpMessage {
    /* No content, WIP */
};

/* return from a basic Ep Component message */
message EpBasicReturnMessage {
    /* No content */
};

/* message type for all Ep Component return messages */
message EpReturnMessage {
    EpComponentError errorCode = 1;
    oneof msg {
        EpBasicReturnMessage basic = 2;
    };
};
